exports[`no-useless-length-check > invalid(1): array.length === 0 || array.every(Boolean) 1`] = `

  1 | array.length === 0 || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(1): array.length === 0 || array.every(Boolean) 2`] = `

Message:
> 1 | array.length === 0 || array.every(Boolean)
    |       ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(10): (array.length > 0 && array.some(Boolean)) && foo 1`] = `

  1 | (array.length > 0 && array.some(Boolean)) && foo

`;

exports[`no-useless-length-check > invalid(10): (array.length > 0 && array.some(Boolean)) && foo 2`] = `

Message:
> 1 | (array.length > 0 && array.some(Boolean)) && foo
    |        ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | (array.some(Boolean)) && foo

`;

exports[`no-useless-length-check > invalid(11): foo && (array.length > 0 && array.some(Boolean)) 1`] = `

  1 | foo && (array.length > 0 && array.some(Boolean))

`;

exports[`no-useless-length-check > invalid(11): foo && (array.length > 0 && array.some(Boolean)) 2`] = `

Message:
> 1 | foo && (array.length > 0 && array.some(Boolean))
    |               ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | foo && (array.some(Boolean))

`;

exports[`no-useless-length-check > invalid(12): array.every(Boolean) || array.length === 0 1`] = `

  1 | array.every(Boolean) || array.length === 0

`;

exports[`no-useless-length-check > invalid(12): array.every(Boolean) || array.length === 0 2`] = `

Message:
> 1 | array.every(Boolean) || array.length === 0
    |                               ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(13): array.some(Boolean) && array.length !== 0 1`] = `

  1 | array.some(Boolean) && array.length !== 0

`;

exports[`no-useless-length-check > invalid(13): array.some(Boolean) && array.length !== 0 2`] = `

Message:
> 1 | array.some(Boolean) && array.length !== 0
    |                              ^^^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(14): array.some(Boolean) && array.length > 0 1`] = `

  1 | array.some(Boolean) && array.length > 0

`;

exports[`no-useless-length-check > invalid(14): array.some(Boolean) && array.length > 0 2`] = `

Message:
> 1 | array.some(Boolean) && array.length > 0
    |                              ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(15): foo && array.length > 0 && array.some(Boolean) 1`] = `

  1 | foo && array.length > 0 && array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(15): foo && array.length > 0 && array.some(Boolean) 2`] = `

Message:
> 1 | foo && array.length > 0 && array.some(Boolean)
    |              ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | foo && array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(16): foo || array.length === 0 || array.every(Boolean) 1`] = `

  1 | foo || array.length === 0 || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(16): foo || array.length === 0 || array.every(Boolean) 2`] = `

Message:
> 1 | foo || array.length === 0 || array.every(Boolean)
    |              ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | foo || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(17): (foo || array.length === 0) || array.every(Boolean) 1`] = `

  1 | (foo || array.length === 0) || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(17): (foo || array.length === 0) || array.every(Boolean) 2`] = `

Message:
> 1 | (foo || array.length === 0) || array.every(Boolean)
    |               ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | (foo) || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(18): array.length === 0 || (array.every(Boolean) || foo) 1`] = `

  1 | array.length === 0 || (array.every(Boolean) || foo)

`;

exports[`no-useless-length-check > invalid(18): array.length === 0 || (array.every(Boolean) || foo) 2`] = `

Message:
> 1 | array.length === 0 || (array.every(Boolean) || foo)
    |       ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | (array.every(Boolean) || foo)

`;

exports[`no-useless-length-check > invalid(19): (foo && array.length > 0) && array.some(Boolean) 1`] = `

  1 | (foo && array.length > 0) && array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(19): (foo && array.length > 0) && array.some(Boolean) 2`] = `

Message:
> 1 | (foo && array.length > 0) && array.some(Boolean)
    |               ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | (foo) && array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(2): array.length > 0 && array.some(Boolean) 1`] = `

  1 | array.length > 0 && array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(2): array.length > 0 && array.some(Boolean) 2`] = `

Message:
> 1 | array.length > 0 && array.some(Boolean)
    |       ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(20): array.length > 0 && (array.some(Boolean) && foo) 1`] = `

  1 | array.length > 0 && (array.some(Boolean) && foo)

`;

exports[`no-useless-length-check > invalid(20): array.length > 0 && (array.some(Boolean) && foo) 2`] = `

Message:
> 1 | array.length > 0 && (array.some(Boolean) && foo)
    |       ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | (array.some(Boolean) && foo)

`;

exports[`no-useless-length-check > invalid(21): array.every(Boolean) || array.length === 0 || array.every(Boolean) 1`] = `

  1 | array.every(Boolean) || array.length === 0 || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(21): array.every(Boolean) || array.length === 0 || array.every(Boolean) 2`] = `

Message:
> 1 | array.every(Boolean) || array.length === 0 || array.every(Boolean)
    |                               ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | array.every(Boolean) || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(22): array.length === 0 || array.every(Boolean) || array.length === 0 1`] = `

  1 | array.length === 0 || array.every(Boolean) || array.length === 0

`;

exports[`no-useless-length-check > invalid(22): array.length === 0 || array.every(Boolean) || array.length === 0 2`] = `

Message:
> 1 | array.length === 0 || array.every(Boolean) || array.length === 0
    |       ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | array.every(Boolean) || array.length === 0

`;

exports[`no-useless-length-check > invalid(22): array.length === 0 || array.every(Boolean) || array.length === 0 3`] = `

Message:
> 1 | array.length === 0 || array.every(Boolean) || array.length === 0
    |                                                     ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | array.length === 0 || array.every(Boolean)

`;

exports[`no-useless-length-check > invalid(23): array1.every(Boolean)\n|| (( array1.length === 0 || array2.length === 0 )) // Both useless\n|| array2.every(Boolean) 1`] = `

  1 | array1.every(Boolean)
  2 | || (( array1.length === 0 || array2.length === 0 )) // Both useless
  3 | || array2.every(Boolean)

`;

exports[`no-useless-length-check > invalid(23): array1.every(Boolean)\n|| (( array1.length === 0 || array2.length === 0 )) // Both useless\n|| array2.every(Boolean) 2`] = `

Message:
  1 | array1.every(Boolean)
> 2 | || (( array1.length === 0 || array2.length === 0 )) // Both useless
    |              ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.
  3 | || array2.every(Boolean)

Output:
  1 | array1.every(Boolean)
  2 | || (( array2.length === 0 )) // Both useless
  3 | || array2.every(Boolean)

`;

exports[`no-useless-length-check > invalid(23): array1.every(Boolean)\n|| (( array1.length === 0 || array2.length === 0 )) // Both useless\n|| array2.every(Boolean) 3`] = `

Message:
  1 | array1.every(Boolean)
> 2 | || (( array1.length === 0 || array2.length === 0 )) // Both useless
    |                                     ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.
  3 | || array2.every(Boolean)

Output:
  1 | array1.every(Boolean)
  2 | || (( array1.length === 0 )) // Both useless
  3 | || array2.every(Boolean)

`;

exports[`no-useless-length-check > invalid(24): function isUselessLengthCheckNode({node, operator, siblings}) {\n\treturn (\n\t\t(\n\t\t\toperator === '||' &&\n\t\t\tzeroLengthChecks.has(node) &&\n\t\t\tsiblings.length > 0 &&\n\t\t\tsiblings.some(condition =>\n\t\t\t\tarrayEveryCalls.has(condition) &&\n\t\t\t\tisSameReference(node.left.object, condition.callee.object)\n\t\t\t)\n\t\t) ||\n\t\t(\n\t\t\toperator === '&&' &&\n\t\t\tnonZeroLengthChecks.has(node) &&\n\t\t\tsiblings.length > 0 &&\n\t\t\tsiblings.some(condition =>\n\t\t\t\tarraySomeCalls.has(condition) &&\n\t\t\t\tisSameReference(node.left.object, condition.callee.object)\n\t\t\t)\n\t\t)\n\t);\n} 1`] = `

   1 | function isUselessLengthCheckNode({node, operator, siblings}) {
   2 | 	return (
   3 | 		(
   4 | 			operator === '||' &&
   5 | 			zeroLengthChecks.has(node) &&
   6 | 			siblings.length > 0 &&
   7 | 			siblings.some(condition =>
   8 | 				arrayEveryCalls.has(condition) &&
   9 | 				isSameReference(node.left.object, condition.callee.object)
  10 | 			)
  11 | 		) ||
  12 | 		(
  13 | 			operator === '&&' &&
  14 | 			nonZeroLengthChecks.has(node) &&
  15 | 			siblings.length > 0 &&
  16 | 			siblings.some(condition =>
  17 | 				arraySomeCalls.has(condition) &&
  18 | 				isSameReference(node.left.object, condition.callee.object)
  19 | 			)
  20 | 		)
  21 | 	);
  22 | }

`;

exports[`no-useless-length-check > invalid(24): function isUselessLengthCheckNode({node, operator, siblings}) {\n\treturn (\n\t\t(\n\t\t\toperator === '||' &&\n\t\t\tzeroLengthChecks.has(node) &&\n\t\t\tsiblings.length > 0 &&\n\t\t\tsiblings.some(condition =>\n\t\t\t\tarrayEveryCalls.has(condition) &&\n\t\t\t\tisSameReference(node.left.object, condition.callee.object)\n\t\t\t)\n\t\t) ||\n\t\t(\n\t\t\toperator === '&&' &&\n\t\t\tnonZeroLengthChecks.has(node) &&\n\t\t\tsiblings.length > 0 &&\n\t\t\tsiblings.some(condition =>\n\t\t\t\tarraySomeCalls.has(condition) &&\n\t\t\t\tisSameReference(node.left.object, condition.callee.object)\n\t\t\t)\n\t\t)\n\t);\n} 2`] = `

Message:
   1 | function isUselessLengthCheckNode({node, operator, siblings}) {
   2 | 	return (
   3 | 		(
   4 | 			operator === '||' &&
   5 | 			zeroLengthChecks.has(node) &&
>  6 | 			siblings.length > 0 &&
     | 			         ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.
   7 | 			siblings.some(condition =>
   8 | 				arrayEveryCalls.has(condition) &&
   9 | 				isSameReference(node.left.object, condition.callee.object)
  10 | 			)
  11 | 		) ||
  12 | 		(
  13 | 			operator === '&&' &&
  14 | 			nonZeroLengthChecks.has(node) &&
  15 | 			siblings.length > 0 &&
  16 | 			siblings.some(condition =>
  17 | 				arraySomeCalls.has(condition) &&
  18 | 				isSameReference(node.left.object, condition.callee.object)
  19 | 			)
  20 | 		)
  21 | 	);
  22 | }

Output:
   1 | function isUselessLengthCheckNode({node, operator, siblings}) {
   2 | 	return (
   3 | 		(
   4 | 			operator === '||' &&
   5 | 			zeroLengthChecks.has(node) &&
   6 | 			siblings.some(condition =>
   7 | 				arrayEveryCalls.has(condition) &&
   8 | 				isSameReference(node.left.object, condition.callee.object)
   9 | 			)
  10 | 		) ||
  11 | 		(
  12 | 			operator === '&&' &&
  13 | 			nonZeroLengthChecks.has(node) &&
  14 | 			siblings.length > 0 &&
  15 | 			siblings.some(condition =>
  16 | 				arraySomeCalls.has(condition) &&
  17 | 				isSameReference(node.left.object, condition.callee.object)
  18 | 			)
  19 | 		)
  20 | 	);
  21 | }

`;

exports[`no-useless-length-check > invalid(24): function isUselessLengthCheckNode({node, operator, siblings}) {\n\treturn (\n\t\t(\n\t\t\toperator === '||' &&\n\t\t\tzeroLengthChecks.has(node) &&\n\t\t\tsiblings.length > 0 &&\n\t\t\tsiblings.some(condition =>\n\t\t\t\tarrayEveryCalls.has(condition) &&\n\t\t\t\tisSameReference(node.left.object, condition.callee.object)\n\t\t\t)\n\t\t) ||\n\t\t(\n\t\t\toperator === '&&' &&\n\t\t\tnonZeroLengthChecks.has(node) &&\n\t\t\tsiblings.length > 0 &&\n\t\t\tsiblings.some(condition =>\n\t\t\t\tarraySomeCalls.has(condition) &&\n\t\t\t\tisSameReference(node.left.object, condition.callee.object)\n\t\t\t)\n\t\t)\n\t);\n} 3`] = `

Message:
   1 | function isUselessLengthCheckNode({node, operator, siblings}) {
   2 | 	return (
   3 | 		(
   4 | 			operator === '||' &&
   5 | 			zeroLengthChecks.has(node) &&
   6 | 			siblings.length > 0 &&
   7 | 			siblings.some(condition =>
   8 | 				arrayEveryCalls.has(condition) &&
   9 | 				isSameReference(node.left.object, condition.callee.object)
  10 | 			)
  11 | 		) ||
  12 | 		(
  13 | 			operator === '&&' &&
  14 | 			nonZeroLengthChecks.has(node) &&
> 15 | 			siblings.length > 0 &&
     | 			         ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.
  16 | 			siblings.some(condition =>
  17 | 				arraySomeCalls.has(condition) &&
  18 | 				isSameReference(node.left.object, condition.callee.object)
  19 | 			)
  20 | 		)
  21 | 	);
  22 | }

Output:
   1 | function isUselessLengthCheckNode({node, operator, siblings}) {
   2 | 	return (
   3 | 		(
   4 | 			operator === '||' &&
   5 | 			zeroLengthChecks.has(node) &&
   6 | 			siblings.length > 0 &&
   7 | 			siblings.some(condition =>
   8 | 				arrayEveryCalls.has(condition) &&
   9 | 				isSameReference(node.left.object, condition.callee.object)
  10 | 			)
  11 | 		) ||
  12 | 		(
  13 | 			operator === '&&' &&
  14 | 			nonZeroLengthChecks.has(node) &&
  15 | 			siblings.some(condition =>
  16 | 				arraySomeCalls.has(condition) &&
  17 | 				isSameReference(node.left.object, condition.callee.object)
  18 | 			)
  19 | 		)
  20 | 	);
  21 | }

`;

exports[`no-useless-length-check > invalid(25): (array as any[]).length === 0 || (array as any[]).every(Boolean) 1`] = `

  1 | (array as any[]).length === 0 || (array as any[]).every(Boolean)

`;

exports[`no-useless-length-check > invalid(25): (array as any[]).length === 0 || (array as any[]).every(Boolean) 2`] = `

Message:
> 1 | (array as any[]).length === 0 || (array as any[]).every(Boolean)
    |                  ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | (array as any[]).every(Boolean)

`;

exports[`no-useless-length-check > invalid(26): (array as any[]).length > 0 && (array as any[]).some(Boolean) 1`] = `

  1 | (array as any[]).length > 0 && (array as any[]).some(Boolean)

`;

exports[`no-useless-length-check > invalid(26): (array as any[]).length > 0 && (array as any[]).some(Boolean) 2`] = `

Message:
> 1 | (array as any[]).length > 0 && (array as any[]).some(Boolean)
    |                  ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | (array as any[]).some(Boolean)

`;

exports[`no-useless-length-check > invalid(27): array!.length === 0 || array!.every(Boolean) 1`] = `

  1 | array!.length === 0 || array!.every(Boolean)

`;

exports[`no-useless-length-check > invalid(27): array!.length === 0 || array!.every(Boolean) 2`] = `

Message:
> 1 | array!.length === 0 || array!.every(Boolean)
    |        ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | array!.every(Boolean)

`;

exports[`no-useless-length-check > invalid(28): array!.length > 0 && array!.some(Boolean) 1`] = `

  1 | array!.length > 0 && array!.some(Boolean)

`;

exports[`no-useless-length-check > invalid(28): array!.length > 0 && array!.some(Boolean) 2`] = `

Message:
> 1 | array!.length > 0 && array!.some(Boolean)
    |        ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | array!.some(Boolean)

`;

exports[`no-useless-length-check > invalid(29): function f(array: Int8Array) { return array.length === 0 || array.every(Boolean); } 1`] = `

  1 | function f(array: Int8Array) { return array.length === 0 || array.every(Boolean); }

`;

exports[`no-useless-length-check > invalid(29): function f(array: Int8Array) { return array.length === 0 || array.every(Boolean); } 2`] = `

Message:
> 1 | function f(array: Int8Array) { return array.length === 0 || array.every(Boolean); }
    |                                             ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | function f(array: Int8Array) { return array.every(Boolean); }

`;

exports[`no-useless-length-check > invalid(3): array.length !== 0 && array.some(Boolean) 1`] = `

  1 | array.length !== 0 && array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(3): array.length !== 0 && array.some(Boolean) 2`] = `

Message:
> 1 | array.length !== 0 && array.some(Boolean)
    |       ^^^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | array.some(Boolean)

`;

exports[`no-useless-length-check > invalid(30): if (array.length > 0) {\n\tfor (const element of array) {\n\t\tuse(element);\n\t}\n} 1`] = `

  1 | if (array.length > 0) {
  2 | 	for (const element of array) {
  3 | 		use(element);
  4 | 	}
  5 | }

`;

exports[`no-useless-length-check > invalid(30): if (array.length > 0) {\n\tfor (const element of array) {\n\t\tuse(element);\n\t}\n} 2`] = `

Message:
> 1 | if (array.length > 0) {
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  2 | 	for (const element of array) {
  3 | 		use(element);
  4 | 	}
  5 | }

Output:
  1 | for (const element of array) {
  2 | 	use(element);
  3 | }

`;

exports[`no-useless-length-check > invalid(31): if (array.length !== 0) {\n\tfor (const element of array) {\n\t\t// Do work.\n\t}\n} 1`] = `

  1 | if (array.length !== 0) {
  2 | 	for (const element of array) {
  3 | 		// Do work.
  4 | 	}
  5 | }

`;

exports[`no-useless-length-check > invalid(31): if (array.length !== 0) {\n\tfor (const element of array) {\n\t\t// Do work.\n\t}\n} 2`] = `

Message:
> 1 | if (array.length !== 0) {
    |           ^^^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  2 | 	for (const element of array) {
  3 | 		// Do work.
  4 | 	}
  5 | }

Output:
  1 | for (const element of array) {
  2 | 	// Do work.
  3 | }

`;

exports[`no-useless-length-check > invalid(32): function iterate(array) {\n\tif (array.length > 0) {\n\t\tfor (const element of array) {\n\t\t\tuse(element);\n\t\t}\n\t}\n} 1`] = `

  1 | function iterate(array) {
  2 | 	if (array.length > 0) {
  3 | 		for (const element of array) {
  4 | 			use(element);
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`no-useless-length-check > invalid(32): function iterate(array) {\n\tif (array.length > 0) {\n\t\tfor (const element of array) {\n\t\t\tuse(element);\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | function iterate(array) {
> 2 | 	if (array.length > 0) {
    | 	          ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  3 | 		for (const element of array) {
  4 | 			use(element);
  5 | 		}
  6 | 	}
  7 | }

Output:
  1 | function iterate(array) {
  2 | 	for (const element of array) {
  3 | 		use(element);
  4 | 	}
  5 | }

`;

exports[`no-useless-length-check > invalid(33): if (array.length > 0) for (const element of array) { use(element); } 1`] = `

  1 | if (array.length > 0) for (const element of array) { use(element); }

`;

exports[`no-useless-length-check > invalid(33): if (array.length > 0) for (const element of array) { use(element); } 2`] = `

Message:
> 1 | if (array.length > 0) for (const element of array) { use(element); }
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of array) { use(element); }

`;

exports[`no-useless-length-check > invalid(34): if (array.length > 0) { for (const element of array) use(element); } 1`] = `

  1 | if (array.length > 0) { for (const element of array) use(element); }

`;

exports[`no-useless-length-check > invalid(34): if (array.length > 0) { for (const element of array) use(element); } 2`] = `

Message:
> 1 | if (array.length > 0) { for (const element of array) use(element); }
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of array) use(element);

`;

exports[`no-useless-length-check > invalid(35): if (((array.length > 0))) { for (const element of array) { use(element); } } 1`] = `

  1 | if (((array.length > 0))) { for (const element of array) { use(element); } }

`;

exports[`no-useless-length-check > invalid(35): if (((array.length > 0))) { for (const element of array) { use(element); } } 2`] = `

Message:
> 1 | if (((array.length > 0))) { for (const element of array) { use(element); } }
    |             ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of array) { use(element); }

`;

exports[`no-useless-length-check > invalid(36): if (object.array.length > 0) { for (const element of object.array) { use(element); } } 1`] = `

  1 | if (object.array.length > 0) { for (const element of object.array) { use(element); } }

`;

exports[`no-useless-length-check > invalid(36): if (object.array.length > 0) { for (const element of object.array) { use(element); } } 2`] = `

Message:
> 1 | if (object.array.length > 0) { for (const element of object.array) { use(element); } }
    |                  ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of object.array) { use(element); }

`;

exports[`no-useless-length-check > invalid(37): if (array.length > 0) { for (const [key, value] of array) { use(key, value); } } 1`] = `

  1 | if (array.length > 0) { for (const [key, value] of array) { use(key, value); } }

`;

exports[`no-useless-length-check > invalid(37): if (array.length > 0) { for (const [key, value] of array) { use(key, value); } } 2`] = `

Message:
> 1 | if (array.length > 0) { for (const [key, value] of array) { use(key, value); } }
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const [key, value] of array) { use(key, value); }

`;

exports[`no-useless-length-check > invalid(38): if (array.length > 0) { for (const element of array) { /* Keep this comment. */ use(element); } } 1`] = `

  1 | if (array.length > 0) { for (const element of array) { /* Keep this comment. */ use(element); } }

`;

exports[`no-useless-length-check > invalid(38): if (array.length > 0) { for (const element of array) { /* Keep this comment. */ use(element); } } 2`] = `

Message:
> 1 | if (array.length > 0) { for (const element of array) { /* Keep this comment. */ use(element); } }
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of array) { /* Keep this comment. */ use(element); }

`;

exports[`no-useless-length-check > invalid(39): if (array.length > 0) {\n\tfor (const element of array) {\n\t\t/*\n\t\tKeep this indentation.\n\t\t*/\n\t\tuse(element);\n\t}\n} 1`] = `

  1 | if (array.length > 0) {
  2 | 	for (const element of array) {
  3 | 		/*
  4 | 		Keep this indentation.
  5 | 		*/
  6 | 		use(element);
  7 | 	}
  8 | }

`;

exports[`no-useless-length-check > invalid(39): if (array.length > 0) {\n\tfor (const element of array) {\n\t\t/*\n\t\tKeep this indentation.\n\t\t*/\n\t\tuse(element);\n\t}\n} 2`] = `

Message:
> 1 | if (array.length > 0) {
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  2 | 	for (const element of array) {
  3 | 		/*
  4 | 		Keep this indentation.
  5 | 		*/
  6 | 		use(element);
  7 | 	}
  8 | }

Output:
  1 | for (const element of array) {
  2 | 	/*
  3 | 	Keep this indentation.
  4 | 	*/
  5 | 	use(element);
  6 | }

`;

exports[`no-useless-length-check > invalid(4): ((\n\t((\n\t\t(( array )).length\n\t)) === (( 0 ))\n\t||\n\t((\n\t\t(( array )).every(Boolean)\n\t))\n)) 1`] = `

  1 | ((
  2 | 	((
  3 | 		(( array )).length
  4 | 	)) === (( 0 ))
  5 | 	||
  6 | 	((
  7 | 		(( array )).every(Boolean)
  8 | 	))
  9 | ))

`;

exports[`no-useless-length-check > invalid(4): ((\n\t((\n\t\t(( array )).length\n\t)) === (( 0 ))\n\t||\n\t((\n\t\t(( array )).every(Boolean)\n\t))\n)) 2`] = `

Message:
  1 | ((
  2 | 	((
> 3 | 		(( array )).length
    | 		            ^^^^^^
> 4 | 	)) === (( 0 ))
    | ^^^^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.
  5 | 	||
  6 | 	((
  7 | 		(( array )).every(Boolean)
  8 | 	))
  9 | ))

Output:
  1 | ((
  2 | 	((
  3 | 		(( array )).every(Boolean)
  4 | 	))
  5 | ))

`;

exports[`no-useless-length-check > invalid(40): if (array.length > 0)\n\tfor (const element of array) {\n\t\tuse(element);\n\t} 1`] = `

  1 | if (array.length > 0)
  2 | 	for (const element of array) {
  3 | 		use(element);
  4 | 	}

`;

exports[`no-useless-length-check > invalid(40): if (array.length > 0)\n\tfor (const element of array) {\n\t\tuse(element);\n\t} 2`] = `

Message:
> 1 | if (array.length > 0)
    |           ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  2 | 	for (const element of array) {
  3 | 		use(element);
  4 | 	}

Output:
  1 | for (const element of array) {
  2 | 	use(element);
  3 | }

`;

exports[`no-useless-length-check > invalid(41): function iterate(array) { if (array.length > 0) { for (var array of array) {} } } 1`] = `

  1 | function iterate(array) { if (array.length > 0) { for (var array of array) {} } }

`;

exports[`no-useless-length-check > invalid(41): function iterate(array) { if (array.length > 0) { for (var array of array) {} } } 2`] = `

Message:
> 1 | function iterate(array) { if (array.length > 0) { for (var array of array) {} } }
    |                                     ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | function iterate(array) { for (var array of array) {} }

`;

exports[`no-useless-length-check > invalid(42): function iterate(array) {\n  if (array.length > 0) {\n    for (const element of array) {\n      use(element);\n    }\n  }\n} 1`] = `

  1 | function iterate(array) {
  2 |   if (array.length > 0) {
  3 |     for (const element of array) {
  4 |       use(element);
  5 |     }
  6 |   }
  7 | }

`;

exports[`no-useless-length-check > invalid(42): function iterate(array) {\n  if (array.length > 0) {\n    for (const element of array) {\n      use(element);\n    }\n  }\n} 2`] = `

Message:
  1 | function iterate(array) {
> 2 |   if (array.length > 0) {
    |             ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  3 |     for (const element of array) {
  4 |       use(element);
  5 |     }
  6 |   }
  7 | }

Output:
  1 | function iterate(array) {
  2 |   for (const element of array) {
  3 |     use(element);
  4 |   }
  5 | }

`;

exports[`no-useless-length-check > invalid(43): if ((array as any[]).length > 0) { for (const element of (array as any[])) { use(element); } } 1`] = `

  1 | if ((array as any[]).length > 0) { for (const element of (array as any[])) { use(element); } }

`;

exports[`no-useless-length-check > invalid(43): if ((array as any[]).length > 0) { for (const element of (array as any[])) { use(element); } } 2`] = `

Message:
> 1 | if ((array as any[]).length > 0) { for (const element of (array as any[])) { use(element); } }
    |                      ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of (array as any[])) { use(element); }

`;

exports[`no-useless-length-check > invalid(44): if ((<any[]>array).length > 0) { for (const element of (<any[]>array)) { use(element); } } 1`] = `

  1 | if ((<any[]>array).length > 0) { for (const element of (<any[]>array)) { use(element); } }

`;

exports[`no-useless-length-check > invalid(44): if ((<any[]>array).length > 0) { for (const element of (<any[]>array)) { use(element); } } 2`] = `

Message:
> 1 | if ((<any[]>array).length > 0) { for (const element of (<any[]>array)) { use(element); } }
    |                    ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of (<any[]>array)) { use(element); }

`;

exports[`no-useless-length-check > invalid(45): if (array!.length !== 0) { for (const element of array!) { use(element); } } 1`] = `

  1 | if (array!.length !== 0) { for (const element of array!) { use(element); } }

`;

exports[`no-useless-length-check > invalid(45): if (array!.length !== 0) { for (const element of array!) { use(element); } } 2`] = `

Message:
> 1 | if (array!.length !== 0) { for (const element of array!) { use(element); } }
    |            ^^^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of array!) { use(element); }

`;

exports[`no-useless-length-check > invalid(46): if ((array satisfies any[]).length > 0) { for (const element of (array satisfies any[])) { use(element); } } 1`] = `

  1 | if ((array satisfies any[]).length > 0) { for (const element of (array satisfies any[])) { use(element); } }

`;

exports[`no-useless-length-check > invalid(46): if ((array satisfies any[]).length > 0) { for (const element of (array satisfies any[])) { use(element); } } 2`] = `

Message:
> 1 | if ((array satisfies any[]).length > 0) { for (const element of (array satisfies any[])) { use(element); } }
    |                             ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | for (const element of (array satisfies any[])) { use(element); }

`;

exports[`no-useless-length-check > invalid(47): function iterate(array: Int8Array) { if (array.length > 0) { for (const element of array) { use(element); } } } 1`] = `

  1 | function iterate(array: Int8Array) { if (array.length > 0) { for (const element of array) { use(element); } } }

`;

exports[`no-useless-length-check > invalid(47): function iterate(array: Int8Array) { if (array.length > 0) { for (const element of array) { use(element); } } } 2`] = `

Message:
> 1 | function iterate(array: Int8Array) { if (array.length > 0) { for (const element of array) { use(element); } } }
    |                                                ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.

Output:
  1 | function iterate(array: Int8Array) { for (const element of array) { use(element); } }

`;

exports[`no-useless-length-check > invalid(48): if (arrays.length > 0) {\n\tfor (const array of arrays) {\n\t\tif (array.length > 0) {\n\t\t\tfor (const element of array) {\n\t\t\t\tuse(element);\n\t\t\t}\n\t\t}\n\t}\n} 1`] = `

  1 | if (arrays.length > 0) {
  2 | 	for (const array of arrays) {
  3 | 		if (array.length > 0) {
  4 | 			for (const element of array) {
  5 | 				use(element);
  6 | 			}
  7 | 		}
  8 | 	}
  9 | }

`;

exports[`no-useless-length-check > invalid(48): if (arrays.length > 0) {\n\tfor (const array of arrays) {\n\t\tif (array.length > 0) {\n\t\t\tfor (const element of array) {\n\t\t\t\tuse(element);\n\t\t\t}\n\t\t}\n\t}\n} 2`] = `

Message:
> 1 | if (arrays.length > 0) {
    |            ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  2 | 	for (const array of arrays) {
  3 | 		if (array.length > 0) {
  4 | 			for (const element of array) {
  5 | 				use(element);
  6 | 			}
  7 | 		}
  8 | 	}
  9 | }

Output:
  1 | for (const array of arrays) {
  2 | 	if (array.length > 0) {
  3 | 		for (const element of array) {
  4 | 			use(element);
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`no-useless-length-check > invalid(48): if (arrays.length > 0) {\n\tfor (const array of arrays) {\n\t\tif (array.length > 0) {\n\t\t\tfor (const element of array) {\n\t\t\t\tuse(element);\n\t\t\t}\n\t\t}\n\t}\n} 3`] = `

Message:
  1 | if (arrays.length > 0) {
  2 | 	for (const array of arrays) {
> 3 | 		if (array.length > 0) {
    | 		          ^^^^^^^^^^ The non-empty check is useless as \`for…of\` does not iterate over an empty array.
  4 | 			for (const element of array) {
  5 | 				use(element);
  6 | 			}
  7 | 		}
  8 | 	}
  9 | }

Output:
  1 | if (arrays.length > 0) {
  2 | 	for (const array of arrays) {
  3 | 		for (const element of array) {
  4 | 			use(element);
  5 | 		}
  6 | 	}
  7 | }

`;

exports[`no-useless-length-check > invalid(5): ((\n\t((\n\t\t(( array )).every(Boolean)\n\t))\n\t||\n\t((\n\t\t(( array )).length\n\t)) === (( 0 ))\n)) 1`] = `

  1 | ((
  2 | 	((
  3 | 		(( array )).every(Boolean)
  4 | 	))
  5 | 	||
  6 | 	((
  7 | 		(( array )).length
  8 | 	)) === (( 0 ))
  9 | ))

`;

exports[`no-useless-length-check > invalid(5): ((\n\t((\n\t\t(( array )).every(Boolean)\n\t))\n\t||\n\t((\n\t\t(( array )).length\n\t)) === (( 0 ))\n)) 2`] = `

Message:
  1 | ((
  2 | 	((
  3 | 		(( array )).every(Boolean)
  4 | 	))
  5 | 	||
  6 | 	((
> 7 | 		(( array )).length
    | 		            ^^^^^^
> 8 | 	)) === (( 0 ))
    | ^^^^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.
  9 | ))

Output:
  1 | ((
  2 | 	((
  3 | 		(( array )).every(Boolean)
  4 | 	))
  5 | ))

`;

exports[`no-useless-length-check > invalid(6): if ((( array.length > 0 )) && array.some(Boolean)); 1`] = `

  1 | if ((( array.length > 0 )) && array.some(Boolean));

`;

exports[`no-useless-length-check > invalid(6): if ((( array.length > 0 )) && array.some(Boolean)); 2`] = `

Message:
> 1 | if ((( array.length > 0 )) && array.some(Boolean));
    |              ^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.

Output:
  1 | if (array.some(Boolean));

`;

exports[`no-useless-length-check > invalid(7): if (\n\tarray.length !== 0 &&\n\tarray.some(Boolean) &&\n\tfoo\n) {\n\t// ...\n} 1`] = `

  1 | if (
  2 | 	array.length !== 0 &&
  3 | 	array.some(Boolean) &&
  4 | 	foo
  5 | ) {
  6 | 	// ...
  7 | }

`;

exports[`no-useless-length-check > invalid(7): if (\n\tarray.length !== 0 &&\n\tarray.some(Boolean) &&\n\tfoo\n) {\n\t// ...\n} 2`] = `

Message:
  1 | if (
> 2 | 	array.length !== 0 &&
    | 	      ^^^^^^^^^^^^ The non-empty check is useless as \`Array#some()\` returns \`false\` for an empty array.
  3 | 	array.some(Boolean) &&
  4 | 	foo
  5 | ) {
  6 | 	// ...
  7 | }

Output:
  1 | if (
  2 | 	array.some(Boolean) &&
  3 | 	foo
  4 | ) {
  5 | 	// ...
  6 | }

`;

exports[`no-useless-length-check > invalid(8): (array.length === 0 || array.every(Boolean)) || foo 1`] = `

  1 | (array.length === 0 || array.every(Boolean)) || foo

`;

exports[`no-useless-length-check > invalid(8): (array.length === 0 || array.every(Boolean)) || foo 2`] = `

Message:
> 1 | (array.length === 0 || array.every(Boolean)) || foo
    |        ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | (array.every(Boolean)) || foo

`;

exports[`no-useless-length-check > invalid(9): foo || (array.length === 0 || array.every(Boolean)) 1`] = `

  1 | foo || (array.length === 0 || array.every(Boolean))

`;

exports[`no-useless-length-check > invalid(9): foo || (array.length === 0 || array.every(Boolean)) 2`] = `

Message:
> 1 | foo || (array.length === 0 || array.every(Boolean))
    |               ^^^^^^^^^^^^ The empty check is useless as \`Array#every()\` returns \`true\` for an empty array.

Output:
  1 | foo || (array.every(Boolean))

`;
